[package]
name = "jigarpich"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.2.2"
dashmap = "5.4.0"
log = "0.4.19"
pretty_env_logger = "0.5.0"
rand = "0.8.5"
serde = "1.0.171"
serde_repr = "0.1.14"
sscanf = "0.4.1"
teloxide = { version = "0.12.2", features = ["macros", "full"] }
tokio = { version = "1.29.1", features = ["full"] }
